[wang]取消auto layout

--- a/XEEnglish/ExpendCalss/Login/ResetPassWordVC.xib
+++ b/XEEnglish/ExpendCalss/Login/ResetPassWordVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ResetPassWordVC">
@@ -17,28 +17,32 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="新密码 ｜" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRY-0P-BaS">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新密码 ｜" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SRY-0P-BaS">
                     <rect key="frame" x="15" y="155" width="90" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="确认密码 ｜" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hv-k5-am8">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="确认密码 ｜" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7hv-k5-am8">
                     <rect key="frame" x="15" y="195" width="90" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="再次输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f4r-tc-gdU">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="再次输入新密码" minimumFontSize="17" id="f4r-tc-gdU">
                     <rect key="frame" x="115" y="195" width="190" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="fuM-D2-uv4"/>
                     </connections>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Sfc-Ki-aUi">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" id="Sfc-Ki-aUi">
                     <rect key="frame" x="15" y="255" width="290" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="0.48263922009999999" blue="0.1546600128" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="保    存">
@@ -49,42 +53,24 @@
                         <action selector="keepBtn:" destination="-1" eventType="touchUpInside" id="3aD-8N-rwe"/>
                     </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A8H-yK-IsM">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入新密码" minimumFontSize="17" id="A8H-yK-IsM">
                     <rect key="frame" x="115" y="155" width="190" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="jWv-XM-9KW"/>
                     </connections>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="请设置新的登录密码，建议密码由6位以上数字、字母组成，这样可以更好的保障您的账户安全" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K3I-CC-zXk">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请设置新的登录密码，建议密码由6位以上数字、字母组成，这样可以更好的保障您的账户安全" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K3I-CC-zXk">
                     <rect key="frame" x="15" y="70" width="290" height="67"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstItem="A8H-yK-IsM" firstAttribute="top" secondItem="K3I-CC-zXk" secondAttribute="bottom" constant="18" id="4dJ-Ji-9V7"/>
-                <constraint firstItem="Sfc-Ki-aUi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="6Zw-i4-2vz"/>
-                <constraint firstItem="SRY-0P-BaS" firstAttribute="top" secondItem="K3I-CC-zXk" secondAttribute="bottom" constant="18" id="K5r-bB-mJZ"/>
-                <constraint firstAttribute="trailing" secondItem="A8H-yK-IsM" secondAttribute="trailing" constant="15" id="KEA-Q1-whE"/>
-                <constraint firstAttribute="trailing" secondItem="f4r-tc-gdU" secondAttribute="trailing" constant="15" id="PRp-Bz-RaG"/>
-                <constraint firstItem="A8H-yK-IsM" firstAttribute="leading" secondItem="SRY-0P-BaS" secondAttribute="trailing" constant="10" id="TNo-Ye-dgJ"/>
-                <constraint firstItem="7hv-k5-am8" firstAttribute="top" secondItem="SRY-0P-BaS" secondAttribute="bottom" constant="10" id="XtD-ch-TUc"/>
-                <constraint firstItem="K3I-CC-zXk" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="70" id="aXq-Be-8D5"/>
-                <constraint firstItem="Sfc-Ki-aUi" firstAttribute="top" secondItem="7hv-k5-am8" secondAttribute="bottom" constant="30" id="gb7-bY-XEt"/>
-                <constraint firstItem="f4r-tc-gdU" firstAttribute="top" secondItem="A8H-yK-IsM" secondAttribute="bottom" constant="10" id="kZg-kK-fcZ"/>
-                <constraint firstItem="Sfc-Ki-aUi" firstAttribute="top" secondItem="f4r-tc-gdU" secondAttribute="bottom" constant="30" id="krB-AX-2mI"/>
-                <constraint firstItem="f4r-tc-gdU" firstAttribute="leading" secondItem="7hv-k5-am8" secondAttribute="trailing" constant="10" id="lJI-ZK-ZvF"/>
-                <constraint firstItem="7hv-k5-am8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="lzP-zY-WNF"/>
-                <constraint firstAttribute="trailing" secondItem="Sfc-Ki-aUi" secondAttribute="trailing" constant="15" id="mAl-We-mi6"/>
-                <constraint firstAttribute="bottom" secondItem="Sfc-Ki-aUi" secondAttribute="bottom" constant="278" id="nKk-hF-ybv"/>
-                <constraint firstItem="K3I-CC-zXk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="oTh-9l-NhP"/>
-                <constraint firstAttribute="trailing" secondItem="K3I-CC-zXk" secondAttribute="trailing" constant="15" id="siO-bA-Cdy"/>
-                <constraint firstItem="SRY-0P-BaS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="tDx-zR-El9"/>
-            </constraints>
             <point key="canvasLocation" x="416" y="364"/>
         </view>
     </objects>
