--- a/XEEnglish/ExpendCalss/Setting/PersonInfo/NeTNameAndDomicileVC.xib
+++ b/XEEnglish/ExpendCalss/Setting/PersonInfo/NeTNameAndDomicileVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NeTNameAndDomicileVC">
@@ -16,8 +16,9 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fOf-bD-OV0">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" id="fOf-bD-OV0">
                     <rect key="frame" x="10" y="80" width="300" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -25,8 +26,9 @@
                         <outlet property="delegate" destination="-1" id="NRO-dg-V19"/>
                     </connections>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JxJ-2M-ue0">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="JxJ-2M-ue0">
                     <rect key="frame" x="10" y="150" width="300" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="0.48263922009999999" blue="0.1546600128" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                     <state key="normal" title="保   存">
@@ -39,15 +41,6 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="JxJ-2M-ue0" secondAttribute="bottom" constant="378" id="8zG-6w-Okp"/>
-                <constraint firstAttribute="trailing" secondItem="JxJ-2M-ue0" secondAttribute="trailing" constant="10" id="9fq-0c-a2g"/>
-                <constraint firstItem="JxJ-2M-ue0" firstAttribute="top" secondItem="fOf-bD-OV0" secondAttribute="bottom" constant="30" id="OH8-uv-H97"/>
-                <constraint firstItem="fOf-bD-OV0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="QRy-9V-mkJ"/>
-                <constraint firstItem="JxJ-2M-ue0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="VhD-Lh-9si"/>
-                <constraint firstItem="fOf-bD-OV0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="sUx-4Z-Kvg"/>
-                <constraint firstAttribute="trailing" secondItem="fOf-bD-OV0" secondAttribute="trailing" constant="10" id="znj-gC-ImQ"/>
-            </constraints>
             <point key="canvasLocation" x="385" y="293"/>
         </view>
     </objects>
