[wang]增加修改密码页面跳转到忘记密码的页面

--- a/XEEnglish/ExpendCalss/Setting/PersonInfo/ChangePassWordVC.xib
+++ b/XEEnglish/ExpendCalss/Setting/PersonInfo/ChangePassWordVC.xib
@@ -96,10 +96,28 @@
                         <outlet property="delegate" destination="-1" id="wyi-rl-hTT"/>
                     </connections>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="exH-Ju-GvX">
+                    <rect key="frame" x="105" y="410" width="110" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="忘记了原密码？">
+                        <color key="titleColor" red="1" green="0.13750915079345472" blue="0.12836017502146191" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="forgetBtn:" destination="-1" eventType="touchUpInside" id="aEm-sT-AQp"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <point key="canvasLocation" x="389" y="202"/>
         </view>
+        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hAR-Zx-IDB">
+            <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <state key="normal" title="Button">
+                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+            </state>
+        </button>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
